// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toEqualLeft() fails when object equals the left 1`] = `
"expect(received).not.toEqualLeft(expectedLeft)

Expected Either not to equal left:
  "same"

But it's the same."
`;

exports[`.not.toEqualLeft() fails when object equals the left using an asymmetric matcher 1`] = `
"expect(received).not.toEqualLeft(expectedLeft)

Expected Either not to equal left:
  ObjectContaining {"test": "ok"}

But it's the same."
`;

exports[`.toEqualLeft() fails when object does not equal the left 1`] = `
"expect(received).toEqualLeft(expectedLeft)

Expected Either to equal left:
  "different"

Received left:
  {"test": "ok"}"
`;

exports[`.toEqualLeft() fails when object does not equal the left using an asymmetric matcher 1`] = `
"expect(received).toEqualLeft(expectedLeft)

Difference from Left:

- Expected
+ Received

- ObjectContaining {
-   "test": "nok",
+ Object {
+   "test": "ok",
  }"
`;

exports[`.toEqualLeft() fails when object is a right 1`] = `
"expect(received).toEqualLeft(expectedLeft)

Expected Either to equal left:
  "same"

Received right."
`;
